--- a/views/student/quiz/8_Functions-quiz.ejs
+++ b/views/student/quiz/8_Functions-quiz.ejs
@@ -572,15 +572,17 @@
                      <br>
 
                 <!-- ข้อ 16 -->
-                <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #363e62;">
-                    16.1 (Deployment) ให้เขียนโปรแกรมเครื่องคิดเลขที่มีการสร้างและเรียกใช้งานฟังก์ชัน ดังนี้ (3 คะแนน)
-                    <br></p>
-                <div class="group2"  style="margin: 20px;">
-                    <iframe src="<%= ADRI1  %> " width="90%" height="600" allow="autoplay"></iframe>
-                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
-                </div>    
-                <div class="form-group">
-                    <textarea class="form-control"  placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="code" required></textarea>
+                <div style="background-color: #363e62;">
+                    <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #363e62;">
+                        16.1 (Deployment) ให้เขียนโปรแกรมเครื่องคิดเลขที่มีการสร้างและเรียกใช้งานฟังก์ชัน ดังนี้ (3 คะแนน)
+                        <br></p>
+                    <div class="group2"  style="margin: 20px;">
+                        <iframe src="<%= ADRI1  %> " width="90%" height="600" allow="autoplay"></iframe>
+                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                    </div>    
+                    <div class="form-group">
+                        <textarea class="form-control"  placeholder="วางโค้ดที่นี่" rows="10" cols="30" name="code" required></textarea>
+                    </div>
                 </div>
                 
                 
@@ -600,15 +602,17 @@
                 <br><br>
 
                 <!-- ข้อ 17 -->
-                <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #8c521f;">
-                    17.1 (Deployment) ให้เขียนโปรแกรมตรวจว่าเป็นเลขคู่หรือเลขคี่ที่มีการสร้างและเรียกใช้งานฟังก์ชัน ดังนี้ (3 คะแนน)
-                    <br></p>
-                <div class="group2" style="margin: 20px;">
-                    <iframe src="<%= ADRI2  %>" width="90%" height="600" allow="autoplay"></iframe>                
-                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
-                </div>
-                <div class="form-group">
-                    <textarea class="form-control" style="height: 400px;" placeholder="วางโค้ดที่นี่" rows="4" cols="30" name="sendLink171" required></textarea>
+                <div style="background-color: #8c521f;">
+                    <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #8c521f;">
+                        17.1 (Deployment) ให้เขียนโปรแกรมตรวจว่าเป็นเลขคู่หรือเลขคี่ที่มีการสร้างและเรียกใช้งานฟังก์ชัน ดังนี้ (3 คะแนน)
+                        <br></p>
+                    <div class="group2" style="margin: 20px;">
+                        <iframe src="<%= ADRI2  %>" width="90%" height="600" allow="autoplay"></iframe>                
+                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                    </div>
+                    <div class="form-group">
+                        <textarea class="form-control" style="height: 400px;" placeholder="วางโค้ดที่นี่" rows="4" cols="30" name="sendLink171" required></textarea>
+                    </div>
                 </div>
                 
 
@@ -628,16 +632,18 @@
                 <br><br>
 
                 <!-- ข้อ 18 -->
-                <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #366241;">
-                    18.1 (Deployment) ให้เขียนโปรแกรมคำนวณปริมาตรทรงกระบอกที่มีการสร้างและเรียกใช้งานฟังก์ชัน ดังนี้ (3 คะแนน)
-                    <br>
-                </p>
-                <div class="group2 style="margin: 20px;">
-                    <iframe src="<%= ADRI3  %>" width="90%" height="600" allow="autoplay"></iframe>
-                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
-                </div>
-                    <div class="form-group">
-                    <textarea class="form-control" style="height: 400px;" placeholder="วางโค้ดที่นี่" rows="4" cols="30" name="sendLink181" required></textarea>
+                <div style="background-color: #366241;">
+                    <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #366241;">
+                        18.1 (Deployment) ให้เขียนโปรแกรมคำนวณปริมาตรทรงกระบอกที่มีการสร้างและเรียกใช้งานฟังก์ชัน ดังนี้ (3 คะแนน)
+                        <br>
+                    </p>
+                    <div class="group2" style="margin: 20px;">
+                        <iframe src="<%= ADRI3  %>" width="90%" height="600" allow="autoplay"></iframe>
+                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                    </div>
+                        <div class="form-group">
+                        <textarea class="form-control" style="height: 400px;" placeholder="วางโค้ดที่นี่" rows="4" cols="30" name="sendLink181" required></textarea>
+                    </div>
                 </div>
 
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #366241;">
@@ -656,15 +662,17 @@
                 <br><br>
 
                 <!-- ข้อ 19 -->
-                <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #453662;">
-                    19.1 (Deployment) ให้เขียนโปรแกรมคำนวณเกรดและแสดงลำดับของนักเรียนที่มีเกรด A โดยให้ทำการสร้างและเรียกใช้งานฟังก์ชัน ดังนี้ (3 คะแนน)
-                </p>
-                <div class="group2" style="margin: 20px;">
-                    <iframe src="<%= ADRI4  %>" width="90%" height="600" allow="autoplay"></iframe>
-                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
-                </div>    
-                <div class="form-group">
-                    <textarea class="form-control" style="height: 400px;" placeholder="วางโค้ดที่นี่" rows="4" cols="30" name="sendLink191" required></textarea>
+                <div style="background-color: #465e8f;">
+                    <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #453662;">
+                        19.1 (Deployment) ให้เขียนโปรแกรมคำนวณเกรดและแสดงลำดับของนักเรียนที่มีเกรด A โดยให้ทำการสร้างและเรียกใช้งานฟังก์ชัน ดังนี้ (3 คะแนน)
+                    </p>
+                    <div class="group2" style="margin: 20px;">
+                        <iframe src="<%= ADRI4  %>" width="90%" height="600" allow="autoplay"></iframe>
+                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                    </div>    
+                    <div class="form-group">
+                        <textarea class="form-control" style="height: 400px;" placeholder="วางโค้ดที่นี่" rows="4" cols="30" name="sendLink191" required></textarea>
+                    </div>
                 </div>
 
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #453662;">
@@ -682,15 +690,17 @@
                 <br><br>
 
                 <!-- ข้อ 20 -->
-                <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #687521;">
-                    20.1 (Deployment) ให้เขียนโปรแกรมเกมท้ายตัวเลข 1-100 ที่มีการสร้างและเรียกใช้งานฟังก์ชัน ดังนี้ (3 คะแนน)
-                    <br></p>
-                <div class="group2" style="margin: 20px;">
-                    <iframe src="<%= ADRI5  %>" width="90%" height="600" allow="autoplay"></iframe> 
-                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
-                </div>
-                <div class="form-group">
-                    <textarea class="form-control" style="height: 400px;" placeholder="วางโค้ดที่นี่" rows="4" cols="30" name="sendLink201" required></textarea>
+                <div style="background-color: #687521;">
+                    <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #687521;">
+                        20.1 (Deployment) ให้เขียนโปรแกรมเกมท้ายตัวเลข 1-100 ที่มีการสร้างและเรียกใช้งานฟังก์ชัน ดังนี้ (3 คะแนน)
+                        <br></p>
+                    <div class="group2" style="margin: 20px;">
+                        <iframe src="<%= ADRI5  %>" width="90%" height="600" allow="autoplay"></iframe> 
+                        <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="100%" height="600px"></iframe>  
+                    </div>
+                    <div class="form-group">
+                        <textarea class="form-control" style="height: 400px;" placeholder="วางโค้ดที่นี่" rows="4" cols="30" name="sendLink201" required></textarea>
+                    </div>
                 </div>
 
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #687521;">
